data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2088.wast
;; 9. **Test Description:**    Evaluate an `if` instruction that conditionally imports and calls a function at runtime using dynamic dispatch. Check that the operand stack and control flow remain consistent upon the import and after the function call returns, ensuring dynamic module imports do not disrupt execution integrity.

(assert_invalid
  (module
    (func $dynamic-import (import "env" "imported_func") (param i32) (result i32))
    (func $main (param i32) (result i32)
      (if (result i32)
        (i32.const 1)
        (then
          (call $dynamic-import (local.get 0))
        )
        (else
          (i32.const 0)
        )
      )
    )
  )
  "type mismatch"
)